fix alignment on mode-toggle-links

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -392,7 +392,7 @@ input:focus {
   right: 5%;
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   width: 500px;
 }
@@ -703,6 +703,7 @@ input:focus {
   display: flex;
   flex-direction: row;
   justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   width: 500px;
 }
